# JustBoss

./: CMakeLists.txt  README.md
src/UI/: DebugUI.cpp  DebugUI.h
src/core/: Game.cpp  Game.h  main.cpp
src/entities/: Boss.cpp  Boss.h  Player.cpp  Player.h
src/manager/: InputManager.cpp  InputManager.h  ResourceManager.h
src/state/: GameState.cpp  GameState.h
